--- a/emacs/.emacs.d/config.org
+++ b/emacs/.emacs.d/config.org
@@ -39,6 +39,8 @@ Yay-Evil distro by Ian Y.E. Pan.
     (global-set-key [remap dabbrev-expand] 'hippie-expand)
     ;; ENVIRONMENT VARIABLES
     ;; (setenv "PYTHONPATH" "/home/dani/src/cm")
+    ;; The bash LSP server is breaking because of NODE memory.
+    (setenv "NODE_OPTIONS" "--max-old-space-size=16384")
     ;; LOAD PATH
     (add-to-list 'load-path "~/.emacs.d/lisp/")
     (custom-set-variables
@@ -256,7 +258,7 @@ Exploring large projects with Projectile and Helm
               (projectile-global-mode)
               (setq projectile-completion-system 'helm)
               (projectile-mode +1)
-              (global-set-key (kbd "M-<f2>") 'projectile-speedbar-open-current-buffer-in-tree)
+              ;; (global-set-key (kbd "M-<f2>") 'projectile-speedbar-open-current-buffer-in-tree)
               ;; (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
               ;; (add-to-list 'projectile-globally-ignored-directories "vendor")
               ))
@@ -269,6 +271,18 @@ Exploring large projects with Projectile and Helm
                 )
     :ensure t
     )
+
+(use-package treemacs-projectile
+  :after (treemacs projectile)
+  :ensure t)
+
+(use-package treemacs-icons-dired
+  :hook (dired-mode . treemacs-icons-dired-enable-once)
+  :ensure t)
+
+(use-package treemacs-magit
+  :after (treemacs magit)
+  :ensure t)
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
